fixed layout on footer, looked unprofessional with large text, irregular white space.

--- a/global.css
+++ b/global.css
@@ -11,6 +11,7 @@ html {
     scroll-behavior: smooth;
     font-size: 18px;
 }
+
 .overlay-active {
     width: 100%;
     height: 100%;
@@ -18,6 +19,7 @@ html {
     background: rgba(39, 39, 39, 0.6);
     z-index: 2;
     bottom: 0;
+    top: 0;
 }
 
 .active {
@@ -54,9 +56,11 @@ h6 {
     text-decoration-color: #29b6f6;
     padding-left: 10px;
 }
+
 .mobile-menu-container {
     display: none;
 }
+
 .main-navigation-container {
     position: relative;
     top: 10px;
@@ -92,6 +96,7 @@ h6 {
     height: 60px;
     padding: 0 10px;
 }
+
 .main-navigation-li i {
     display: none;
 }
@@ -382,6 +387,7 @@ ul.work-dropdown-menu {
     margin: 0 auto 50px auto;
     box-sizing: border-box;
 }
+
 .project {
     margin: 20px;
 }
@@ -674,21 +680,23 @@ ul.work-dropdown-menu {
 
 /* Footer */
 .footer {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    padding: 20px;
+    padding: 30px 50px;
     background: #3a3a3a;
-
+}
+.footer-container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
 }
 
 .logo-and-footer-links-container {
     display: flex;
-    width: 40%;
+    width: 20%;
 }
 
 .footer .logo-container {
     align-items: flex-start;
+    display: none;
 }
 
 .footer .logo-container .logo {
@@ -698,8 +706,9 @@ ul.work-dropdown-menu {
 .footer-ul {
     padding: 0;
     margin: 0;
-    width: 25%;
+    width: 100%;
     display: flex;
+    font-size: .81em;
     flex-direction: column;
 }
 
@@ -716,13 +725,15 @@ ul.work-dropdown-menu {
 }
 
 .footer a:hover {
-    color: #29b6f6;
+    color: #afafaf;
+    text-decoration: underline;
 }
 
 .contact-us-container {
     width: 30%;
     display: flex;
     flex-direction: column;
+    display: none;
 }
 
 .contact-us-container h3 {
@@ -745,6 +756,10 @@ ul.work-dropdown-menu {
     flex-direction: column;
 }
 
+.giveaway-container a {
+    width: 100%;
+}
+
 .giveaway-container .fa-facebook-square {
     padding-top: 15px;
     color: #fff;
@@ -760,8 +775,11 @@ ul.work-dropdown-menu {
 .contact-us-container h3 {
     text-align: left;
     color: #fff;
-    font-size: 30px;
+    font-size: .85em;
     margin: 0;
+    font-weight: bold;
+    width: 100%;
+    letter-spacing: 2px;
 }
 
 /* Media Queries */
@@ -841,13 +859,13 @@ ul.work-dropdown-menu {
         align-items: flex-start;
     }
 
-    div.mobile-menu-button.view-more{
+    div.mobile-menu-button.view-more {
         width: 100%;
         flex-direction: row;
         padding: 0;
         padding-right: 10px;
     }
- 
+
     ul.work-dropdown-menu.mobile {
         height: 0px;
         position: relative;
@@ -901,6 +919,7 @@ ul.work-dropdown-menu {
         display: block;
         padding-right: 10px;
     }
+
     .main-navigation.mobile-active-ul .main-navigation-a .fa-angle-right {
         padding: 0;
     }
@@ -930,17 +949,21 @@ ul.work-dropdown-menu {
         padding-top: 5px;
         transition: all ease-in-out 300ms;
     }
+
     .mobile-active-ul .main-navigation-a.work .fa-angle-right.rotate-icon {
         transform: rotate(90deg);
     }
+
     .mobile-menu-container {
         display: block;
         order: 1;
     }
+
     .mobile-menu-button.view-more {
         display: flex;
         justify-content: flex-end;
     }
+
     .mobile-menu-button-link {
         color: #fff;
         padding-right: 10px;
@@ -1075,7 +1098,9 @@ ul.work-dropdown-menu {
         padding: 5px;
         flex-direction: column;
     }
-
+    .footer-container {
+        flex-direction: column;
+    }
     .contact-us-container a {
         font-size: 1em;
         width: 100%;
@@ -1084,23 +1109,23 @@ ul.work-dropdown-menu {
     }
 
     .logo-and-footer-links-container {
-        display: none;
+    width: 100%;
+    margin: 30px 0;
     }
 
     .giveaway-container {
         width: 100%;
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin-bottom: 30px;
     }
 
     .giveaway {
-        font-size: 18px;
-        text-align: center;
         width: 100%;
     }
 
     .facebook-icon-container {
-        text-align: center;
         margin: 0 auto;
-        width: 50px;
     }
 
     .contact-us-container {
